--- a/gui-orchid/pubspec.yaml
+++ b/gui-orchid/pubspec.yaml
@@ -13,6 +13,9 @@ version: 0.9.0+1
 environment:
   sdk: ">=2.19.1 <3.0.0"
 
+# Remaining non-null safe dependencies:
+#  package:dartjsengine (jsparser, symbol_table)
+#
 dependencies:
   badges: 3.1.1
   browser_detector: 2.0.0
