--- a/web-ethereum/dapp2/pubspec.yaml
+++ b/web-ethereum/dapp2/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
   sdk: ">=2.19.1 <3.0.0"
 
 dependencies:
-  badges: 1.2.0
+  badges: 3.1.1
   cupertino_icons: 1.0.2
-  dartjsengine: 1.0.1
+#  dartjsengine: 1.0.1
   dotted_border: 2.0.0+2
   email_validator: 2.0.1
   flutter:
