--- a/web-ethereum/dapp_widget/pubspec.yaml
+++ b/web-ethereum/dapp_widget/pubspec.yaml
@@ -8,18 +8,20 @@ environment:
 
 dependencies:
   cupertino_icons: 1.0.2
-  dartjsengine: 1.0.1
+
+  dartjsengine:
+    path: dartjsengine/dartjsengine-1.0.1
+
   flutter:
     sdk: flutter
-  flutter_cupertino_localizations: 1.0.1
   flutter_localizations:
     sdk: flutter
   flutter_lints: ^1.0.0
   flutter_svg: 1.0.3
   flutter_web3: 2.1.6
-  intl: 0.17.0
+  intl: 0.18.0
   pointycastle: 3.5.0
-  rxdart: 0.25.0
+  rxdart: 0.27.7
   shared_preferences: 2.0.5
   styled_text: 4.0.0
   uuid: 3.0.5
