--- a/gui-orchid/pubspec.yaml
+++ b/gui-orchid/pubspec.yaml
@@ -11,7 +11,8 @@ publish_to: none
 version: 0.9.0+1
 
 environment:
-  sdk: ">=2.19.1 <3.0.0"
+#  sdk: ">=2.19.1 <3.0.0"
+  sdk: ">=3.0.6 <4.0.0"
 
 # Remaining non-null safe dependencies:
 #  package:dartjsengine (jsparser, symbol_table)
@@ -24,6 +25,9 @@ dependencies:
   dartjsengine:
     path: dartjsengine/dartjsengine-1.0.1
 
+  fixnum: ^1.1.0
+  flutter_js: ^0.8.0
+
   dotted_border: 2.0.0+2
   email_validator: 2.0.1
   flutter:
@@ -34,10 +38,10 @@ dependencies:
   #flutter_secure_storage: 3.3.5 # XXX: macOS
   flutter_svg: 1.0.3
   font_awesome_flutter: 9.0.0
-  http: 0.13.4
+  http: 1.1.0
   in_app_purchase_storekit: 0.3.5+2
   in_app_purchase_android: 0.2.3+7
-  intl: 0.17.0
+  intl: 0.18.0
   jdenticon_dart: 2.0.0
 
   # Tracking this issue which has been merged but is not yet in a tagged release.
@@ -48,7 +52,7 @@ dependencies:
       ref: 9e4e9a167980f8413c1d8860873e582d0747edd9
 
   percent_indicator: 3.0.1
-  pointycastle: 3.5.0
+  pointycastle: 3.7.3
   provider: 5.0.0
   qr_flutter: 4.0.0
   rxdart: 0.27.7
@@ -56,13 +60,13 @@ dependencies:
   styled_text: 7.0.0
   sqflite: 2.0.0+3
   url_launcher: 6.0.3
-  uuid: 3.0.5
-  web3dart: 2.3.3
+  uuid: 3.0.7
+  web3dart: 2.7.1
   window_size:
     path: flutter-desktop-embedding/plugins/window_size
 
 dev_dependencies:
-  dart_code_metrics: 4.21.3
+#  dart_code_metrics: 4.21.3
   flutter_test:
     sdk: flutter
   pedantic: 1.11.0
