--- a/gui-orchid/pubspec.yaml
+++ b/gui-orchid/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   cupertino_icons: 1.0.2
   dotted_border: 2.0.0+2
   email_validator: 2.0.1
-  fixnum: ^1.1.0
-  flutter_js: ^0.8.0
+  fixnum: 1.1.0
+  flutter_js: 0.8.0
   flutter:
     sdk: flutter
   flutter_html: 3.0.0-alpha.6
